--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "posts-api",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "posts-api-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/Ruslan379/posts-api/issues"
   },
-  "homepage": "https://github.com/Ruslan379/posts-api#readme"
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "homepage": "https://github.com/Ruslan379/posts-api#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
