--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "url": "https://github.com/Ruslan379/posts-api/issues"
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2"
   },
   "homepage": "https://github.com/Ruslan379/posts-api#readme",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.3"
   }
 }
